# SPEC_A7_Management-sw

./: .gitignore  README.md
doc/: system_diagram.drawio
qs93_linux/: docker-compose.yml  docker_build  docker_run  readme_uboot_config
qs93_linux/data/: build_openwrt.sh  download_openwrt.sh  run_in_qemu.sh
qs93_linux/data/variantfiles/configs/: .config  .config_full  .config_openwrt24
qs93_linux/data/variantfiles/devicetree/: dt-make-bin.sh  dt-make-text.sh  imx93-qs93-5210.dts  imx93-qs93-eqos-dp83869.dts  imx93-qs93-eqos-lan8710.dts  imx93-qs93-fec-lan8710.dts  imx93-qs93-spidev.dts  prepare_fdt.sh
qs93_linux/helpers_docker/: Dockerfile  packages.txt
sourcecode/: Makefile  xcompile.mk
sourcecode/etc_config/: xvc
sourcecode/etc_initd_scripts/: wrnode_init  wrnode_xvc
sourcecode/hello/: main.c  makefile
sourcecode/luci_www/luci-app-wrnode/htdocs/luci-static/resources/view/wrnode/: fpga.js  shellinabox.js  spiflash.js  status.js  xvc.js
sourcecode/luci_www/luci-app-wrnode/root/usr/share/luci/menu.d/: luci-app-wrnode.json
sourcecode/luci_www/luci-app-wrnode/root/usr/share/rpcd/acl.d/: luci-app-wrnode.json
sourcecode/scripts/: flashspec  get_status_services  get_status_wrnode  specstat  wrconsole  wrnode_init.sh
sourcecode/wrnode_status_init/: wrnode.json
sourcecode/xvc/: CMakeLists.txt  README.md  gpio.c  main.c  makefile  toolchain.cmake  xcompile.mk
sourcecode/xvc_server_daemon/: README.md  main.c  makefile
